--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
       color: #00332e;
       transition: background-color 0.5s ease, color 0.5s ease;
     }
+
     .logo {
       max-height: 120px;
       display: block;
@@ -20,10 +21,7 @@
       opacity: 0;
       animation: fadeInLogo 1.5s ease-out forwards;
     }
-    @keyframes fadeInLogo {
-      from { opacity: 0; transform: translateY(-10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
+
     .site-title {
       text-align: center;
       font-family: 'Playfair Display', serif;
@@ -34,10 +32,7 @@
       opacity: 0;
       animation: fadeInTitle 1.5s ease-out forwards;
     }
-    @keyframes fadeInTitle {
-      from { opacity: 0; transform: translateY(-10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
+
     nav {
       display: flex;
       justify-content: center;
@@ -48,10 +43,7 @@
       opacity: 0;
       animation: fadeInNav 1.5s ease-out forwards;
     }
-    @keyframes fadeInNav {
-      from { opacity: 0; transform: translateY(-10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
+
     nav a {
       text-decoration: none;
       color: #004d43;
@@ -59,10 +51,12 @@
       font-size: 1.1rem;
       transition: color 0.3s ease, transform 0.3s ease;
     }
+
     nav a:hover {
       color: #002621;
       transform: translateY(-2px);
     }
+
     main {
       background: #ffffffcc;
       border-radius: 12px;
@@ -73,10 +67,7 @@
       opacity: 0;
       animation: fadeInMain 1.5s ease-out forwards;
     }
-    @keyframes fadeInMain {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
+
     footer {
       text-align: center;
       padding: 1rem;
@@ -85,51 +76,99 @@
       opacity: 0;
       animation: fadeInFooter 1.5s ease-out forwards;
     }
+
+    h1, p {
+      animation: glowingText 1.5s ease-in-out infinite alternate;
+    }
+
+    ul {
+      padding: 0;
+      list-style: none;
+    }
+
+    ul li {
+      margin: 0.5rem 0;
+    }
+
+    ul li a {
+      color: #007d76;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    ul li a:hover {
+      text-decoration: underline;
+    }
+
+    /* Animations */
+    @keyframes fadeInLogo {
+      from { opacity: 0; transform: translateY(-10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes fadeInTitle {
+      from { opacity: 0; transform: translateY(-10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes fadeInNav {
+      from { opacity: 0; transform: translateY(-10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes fadeInMain {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
     @keyframes fadeInFooter {
       from { opacity: 0; transform: translateY(10px); }
       to { opacity: 1; transform: translateY(0); }
     }
+
+    @keyframes glowingText {
+      0% { text-shadow: 0 0 5px #00e5e5, 0 0 10px #00e5e5; }
+      100% { text-shadow: 0 0 15px #00e5e5, 0 0 20px #00e5e5; }
+    }
+
     /* ChatGPT Mode Styles */
     body.chatgpt-active {
       background-color: #121212;
       color: #e5e5e5;
-      font-family: 'Open Sans', sans-serif;
-      transition: background-color 0.5s ease, color 0.5s ease;
     }
+
     body.chatgpt-active nav {
       background-color: #1f1f1f;
     }
+
     body.chatgpt-active nav a {
       color: #e5e5e5;
     }
+
     body.chatgpt-active nav a:hover {
       color: #00e5e5;
     }
+
     body.chatgpt-active main {
       background: rgba(0, 0, 0, 0.7);
       box-shadow: 0 4px 20px rgba(0, 0, 0, 0.7);
       border: 1px solid #444;
     }
+
     body.chatgpt-active .site-title {
       color: #00e5e5;
       text-shadow: 0 0 10px #00e5e5;
     }
+
     body.chatgpt-active footer {
       background: #1f1f1f;
       color: #e5e5e5;
-    }
-    /* Glowing text effect */
-    h1, p {
-      animation: glowingText 1.5s ease-in-out infinite alternate;
-    }
-    @keyframes glowingText {
-      0% { text-shadow: 0 0 5px #00e5e5, 0 0 10px #00e5e5; }
-      100% { text-shadow: 0 0 15px #00e5e5, 0 0 20px #00e5e5; }
     }
   </style>
 </head>
 <body>
   <div class="site-title">ChatGPT-Crafted Wisdom</div>
+
   <nav>
     <a href="index.html">Home</a>
     <a href="wisdom.html">Wisdom</a>
@@ -139,11 +178,25 @@
     <a href="contact.html">Contact</a>
     <a href="#" onclick="toggleChatGPTMode()">ChatGPT Mode</a>
   </nav>
+
   <main>
     <img src="logo.png" alt="ChatGPT-Crafted Wisdom Logo" class="logo">
     <h1>Contact</h1>
-    <p>This site is maintained by an AI assistant (ChatGPT) and a human administrator. For inquiries, reflections, or collaborations, reach out through the GitHub repository or by sharing feedback via social media linked on the homepage (coming soon).</p>
+
+    <p>We’d love to hear from you!</p>
+    <p>This site is maintained through a collaboration between a human and <strong>ChatGPT</strong>. Whether you're here to share reflections, ask questions, or collaborate—you're welcome.</p>
+
+    <div style="background-color: #f0fdfc; border-left: 6px solid #00a896; padding: 1.5rem; border-radius: 8px; margin: 2rem 0; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
+      <p><strong>Reach out directly:</strong></p>
+      <ul>
+        <li>✉️ Email: <a href="mailto:chatgptcrafted@gmail.com">chatgptcrafted@gmail.com</a></li>
+        <li>🐱 GitHub: <a href="https://github.com/openai" target="_blank">github.com/openai</a></li>
+      </ul>
+    </div>
+
+    <p>More social channels are coming soon. Stay tuned!</p>
   </main>
+
   <footer>
     &copy; 2025 ChatGPT-Crafted Wisdom. All rights reserved.
   </footer>
