--- a/contact.html
+++ b/contact.html
@@ -13,15 +13,21 @@
       color: #00332e;
       transition: background-color 0.5s ease, color 0.5s ease;
     }
-
     .logo {
       max-height: 120px;
       display: block;
       margin: 0 auto 2rem;
       opacity: 0;
-      animation: fadeInLogo 1.5s ease-out forwards;
+      animation: fadeInLogo 1.5s ease-out forwards, float 4s ease-in-out infinite;
     }
-
+    @keyframes fadeInLogo {
+      from { opacity: 0; transform: translateY(-10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    @keyframes float {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-5px); }
+    }
     .site-title {
       text-align: center;
       font-family: 'Playfair Display', serif;
@@ -30,9 +36,12 @@
       margin-top: 1.5rem;
       margin-bottom: 0.5rem;
       opacity: 0;
-      animation: fadeInTitle 1.5s ease-out forwards;
+      animation: fadeInTitle 1.5s ease-out forwards, float 6s ease-in-out infinite;
     }
-
+    @keyframes fadeInTitle {
+      from { opacity: 0; transform: translateY(-10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
     nav {
       display: flex;
       justify-content: center;
@@ -43,7 +52,10 @@
       opacity: 0;
       animation: fadeInNav 1.5s ease-out forwards;
     }
-
+    @keyframes fadeInNav {
+      from { opacity: 0; transform: translateY(-10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
     nav a {
       text-decoration: none;
       color: #004d43;
@@ -51,12 +63,10 @@
       font-size: 1.1rem;
       transition: color 0.3s ease, transform 0.3s ease;
     }
-
     nav a:hover {
       color: #002621;
       transform: translateY(-2px);
     }
-
     main {
       background: #ffffffcc;
       border-radius: 12px;
@@ -67,7 +77,10 @@
       opacity: 0;
       animation: fadeInMain 1.5s ease-out forwards;
     }
-
+    @keyframes fadeInMain {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
     footer {
       text-align: center;
       padding: 1rem;
@@ -76,99 +89,88 @@
       opacity: 0;
       animation: fadeInFooter 1.5s ease-out forwards;
     }
-
-    h1, p {
-      animation: glowingText 1.5s ease-in-out infinite alternate;
-    }
-
-    ul {
-      padding: 0;
-      list-style: none;
-    }
-
-    ul li {
-      margin: 0.5rem 0;
-    }
-
-    ul li a {
-      color: #007d76;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    ul li a:hover {
-      text-decoration: underline;
-    }
-
-    /* Animations */
-    @keyframes fadeInLogo {
-      from { opacity: 0; transform: translateY(-10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    @keyframes fadeInTitle {
-      from { opacity: 0; transform: translateY(-10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    @keyframes fadeInNav {
-      from { opacity: 0; transform: translateY(-10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    @keyframes fadeInMain {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
     @keyframes fadeInFooter {
       from { opacity: 0; transform: translateY(10px); }
       to { opacity: 1; transform: translateY(0); }
     }
 
-    @keyframes glowingText {
-      0% { text-shadow: 0 0 5px #00e5e5, 0 0 10px #00e5e5; }
-      100% { text-shadow: 0 0 15px #00e5e5, 0 0 20px #00e5e5; }
-    }
-
-    /* ChatGPT Mode Styles */
+    /* ChatGPT Mode */
     body.chatgpt-active {
       background-color: #121212;
       color: #e5e5e5;
     }
-
     body.chatgpt-active nav {
       background-color: #1f1f1f;
     }
-
     body.chatgpt-active nav a {
       color: #e5e5e5;
     }
-
     body.chatgpt-active nav a:hover {
       color: #00e5e5;
     }
-
     body.chatgpt-active main {
       background: rgba(0, 0, 0, 0.7);
       box-shadow: 0 4px 20px rgba(0, 0, 0, 0.7);
       border: 1px solid #444;
     }
-
     body.chatgpt-active .site-title {
       color: #00e5e5;
       text-shadow: 0 0 10px #00e5e5;
     }
-
     body.chatgpt-active footer {
       background: #1f1f1f;
       color: #e5e5e5;
     }
+
+    /* Contact Button */
+    .contact-button {
+      display: inline-block;
+      background-color: #00e5e5;
+      color: #121212;
+      font-weight: bold;
+      padding: 0.75rem 1.5rem;
+      border-radius: 8px;
+      text-decoration: none;
+      box-shadow: 0 0 10px #00e5e5;
+      transition: all 0.3s ease;
+      animation: float 3s ease-in-out infinite;
+    }
+    .contact-button:hover {
+      background-color: #00cccc;
+      box-shadow: 0 0 20px #00e5e5, 0 0 30px #00e5e5;
+      transform: translateY(-2px);
+    }
+
+    /* Toggle Icon */
+    .toggle-icon {
+      position: fixed;
+      top: 1rem;
+      right: 1rem;
+      background: #00e5e5;
+      border: none;
+      border-radius: 50%;
+      width: 50px;
+      height: 50px;
+      font-size: 24px;
+      color: #121212;
+      cursor: pointer;
+      box-shadow: 0 0 10px #00e5e5;
+      transition: transform 0.3s ease;
+      z-index: 1000;
+    }
+    .toggle-icon:hover {
+      transform: rotate(180deg) scale(1.1);
+    }
+    body.chatgpt-active .toggle-icon {
+      background: #333;
+      color: #00e5e5;
+      box-shadow: 0 0 10px #00e5e5;
+    }
   </style>
 </head>
 <body>
+  <button class="toggle-icon" onclick="toggleChatGPTMode()">🌓</button>
   <div class="site-title">ChatGPT-Crafted Wisdom</div>
-
   <nav>
     <a href="index.html">Home</a>
     <a href="wisdom.html">Wisdom</a>
@@ -176,27 +178,16 @@
     <a href="herbal.html">Herbal</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
-    <a href="#" onclick="toggleChatGPTMode()">ChatGPT Mode</a>
   </nav>
-
   <main>
     <img src="logo.png" alt="ChatGPT-Crafted Wisdom Logo" class="logo">
     <h1>Contact</h1>
-
-    <p>We’d love to hear from you!</p>
-    <p>This site is maintained through a collaboration between a human and <strong>ChatGPT</strong>. Whether you're here to share reflections, ask questions, or collaborate—you're welcome.</p>
-
-    <div style="background-color: #f0fdfc; border-left: 6px solid #00a896; padding: 1.5rem; border-radius: 8px; margin: 2rem 0; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
-      <p><strong>Reach out directly:</strong></p>
-      <ul>
-        <li>✉️ Email: <a href="mailto:chatgptcrafted@gmail.com">chatgptcrafted@gmail.com</a></li>
-        <li>🐱 GitHub: <a href="https://github.com/openai" target="_blank">github.com/openai</a></li>
-      </ul>
+    <p style="text-align:center;">This site is maintained by an AI assistant and a human administrator.</p>
+    <div style="text-align: center; margin-top: 2rem;">
+      <p><strong>Want to get in touch?</strong></p>
+      <a href="https://chatgpt.com/" target="_blank" class="contact-button">Visit ChatGPT</a>
     </div>
-
-    <p>More social channels are coming soon. Stay tuned!</p>
   </main>
-
   <footer>
     &copy; 2025 ChatGPT-Crafted Wisdom. All rights reserved.
   </footer>
