--- a/herbal.html
+++ b/herbal.html
@@ -19,7 +19,7 @@
       position: absolute;
       top: 20px;
       right: 40px;
-      width: 80px;
+      width: 100px;
       animation: rotateSun 20s linear infinite;
       z-index: 1;
     }
@@ -27,7 +27,7 @@
     .vine-img {
       position: absolute;
       top: 0;
-      width: 120px;
+      width: 140px;
       z-index: 1;
       animation: sway 6s ease-in-out infinite;
     }
@@ -135,9 +135,9 @@
 <body>
 
   <!-- Decorative Graphics -->
-  <img src="sun.png" alt="Sun" class="sun-img" />
-  <img src="vine-left.png" alt="Left Vine" class="vine-img vine-left" />
-  <img src="vine-right.png" alt="Right Vine" class="vine-img vine-right" />
+  <img src="sun-highres.png" alt="Sun" class="sun-img" />
+  <img src="vine-left-highres.png" alt="Left Vine" class="vine-img vine-left" />
+  <img src="vine-right-highres.png" alt="Right Vine" class="vine-img vine-right" />
 
   <!-- Header & Nav -->
   <div class="site-title">ChatGPT-Crafted Wisdom</div>
@@ -152,7 +152,7 @@
   </nav>
 
   <main>
-    <img src="logo.png" alt="ChatGPT-Crafted Wisdom Logo" class="logo">
+    <img src="logo-highres.png" alt="ChatGPT-Crafted Wisdom Logo" class="logo">
 
     <header>
       <h1>Anti-Cancer Support & Prevention Tea Blend</h1>
@@ -220,7 +220,7 @@
     <section>
       <h2>Infographic</h2>
       <div class="image-container">
-        <img src="1000006917.jpg" alt="Anti-Cancer Support Tea Infographic" />
+        <img src="anti-cancer-infographic-highres.png" alt="Anti-Cancer Support Tea Infographic" />
       </div>
     </section>
 
