--- a/herbal.html
+++ b/herbal.html
@@ -135,7 +135,7 @@
 <body>
 
   <!-- Decorative Graphics -->
-  <img src="sun-highres.png" alt="Sun" class="sun-img" />
+  <img src="sun.png" alt="Sun" class="sun-img" />
   <img src="vine-left-highres.png" alt="Left Vine" class="vine-img vine-left" />
   <img src="vine-right-highres.png" alt="Right Vine" class="vine-img vine-right" />
 
@@ -152,7 +152,7 @@
   </nav>
 
   <main>
-    <img src="logo-highres.png" alt="ChatGPT-Crafted Wisdom Logo" class="logo">
+    <img src="logo.png" alt="ChatGPT-Crafted Wisdom Logo" class="logo">
 
     <header>
       <h1>Anti-Cancer Support & Prevention Tea Blend</h1>
