--- a/herbal.html
+++ b/herbal.html
@@ -74,6 +74,7 @@
       z-index: 2;
       border-bottom: 2px solid #e0c987;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+      flex-wrap: wrap;
     }
 
     nav a {
@@ -89,6 +90,16 @@
       background-color: #fddc8a;
       color: #2c1f0f;
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    @media (max-width: 768px) {
+      nav {
+        flex-direction: column;
+        align-items: center;
+      }
+      nav a {
+        margin: 0.5rem 0;
+      }
     }
 
     main {
