--- a/herbal.html
+++ b/herbal.html
@@ -211,3 +211,45 @@
     </section>
 
     <section>
+      <h2>Possible Side Effects</h2>
+      <ul>
+        <li><strong>Green Tea:</strong> Contains caffeine; may cause jitteriness, insomnia</li>
+        <li><strong>Turmeric:</strong> May cause stomach irritation; avoid with gallstones</li>
+        <li><strong>Ginger:</strong> Blood-thinning; caution with anticoagulants</li>
+        <li><strong>Milk Thistle:</strong> May cause bloating or mild digestive upset</li>
+        <li><strong>Dandelion Root:</strong> Natural diuretic; not ideal for those on diuretics or with kidney conditions</li>
+        <li><strong>Red Clover:</strong> Phytoestrogens; caution with hormone-sensitive conditions</li>
+        <li><strong>Holy Basil:</strong> Generally safe; avoid in pregnancy without consultation</li>
+        <li><strong>Reishi Mushroom:</strong> In large doses may cause dry mouth, dizziness, or upset stomach</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Precautions</h2>
+      <p>This tea is intended for wellness and prevention. Consult a healthcare professional if you:</p>
+      <ul>
+        <li>Are undergoing cancer treatment</li>
+        <li>Are pregnant or breastfeeding</li>
+        <li>Take blood thinners or liver/kidney medications</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Infographic</h2>
+      <div class="image-container">
+        <img src="anti-cancer-infographic-highres.png" alt="Anti-Cancer Support Tea Infographic" />
+      </div>
+    </section>
+
+    <section>
+      <h2>How This Formula Was Created</h2>
+      <p>This blend was crafted with the assistance of ChatGPT, drawing from trusted herbal sources like “Medical Herbalism” by David Hoffmann, clinical studies from PubMed, and respected traditions in Ayurveda and Western herbal medicine.</p>
+    </section>
+
+  </main>
+
+  <footer>
+    &copy; 2025 ChatGPT-Crafted Wisdom. All rights reserved.
+  </footer>
+</body>
+</html>
