--- a/herbal.html
+++ b/herbal.html
@@ -237,7 +237,7 @@
     <section>
       <h2>Infographic</h2>
       <div class="image-container">
-        <img src="anti-cancer-infographic-highres.png" alt="Anti-Cancer Support Tea Infographic" />
+        <img src="1000006917.jpg" alt="Anti-Cancer Support Tea Infographic" />
       </div>
     </section>
 
