--- a/herbal.html
+++ b/herbal.html
@@ -80,7 +80,7 @@
     }
 
     nav a {
-      flex: 1 1 calc(33.333% - 1rem);
+      flex: 1 1 calc(50% - 1rem); /* Adjust width to fit 2 rows */
       text-align: center;
       text-decoration: none;
       color: #5c3b1e;
