--- a/herbal.html
+++ b/herbal.html
@@ -80,7 +80,7 @@
     }
 
     nav a {
-      flex: 1 1 calc(50% - 1rem); /* Adjust width to fit 2 rows */
+      flex: 1 1 calc(33.333% - 1rem); /* Adjust for 3 columns */
       text-align: center;
       text-decoration: none;
       color: #5c3b1e;
@@ -94,6 +94,19 @@
       background-color: #fddc8a;
       color: #2c1f0f;
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    /* Adjust for 2 rows in the menu */
+    @media (min-width: 768px) {
+      nav {
+        flex-wrap: wrap;
+        max-width: 600px;
+        margin: 0 auto;
+      }
+
+      nav a {
+        flex: 1 1 calc(50% - 1rem); /* Make each link take half of the available space */
+      }
     }
 
     @media (max-width: 768px) {
