--- a/herbal.html
+++ b/herbal.html
@@ -6,6 +6,7 @@
   <title>ChatGPT-Crafted Wisdom</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
   <style>
+    /* Default Styles */
     body {
       margin: 0;
       font-family: 'Open Sans', sans-serif;
@@ -13,6 +14,13 @@
       color: #2e2e1f;
       position: relative;
       overflow-x: hidden;
+      transition: all 0.3s ease;
+    }
+
+    /* Inspiration Mode Styles */
+    body.inspiration-mode {
+      background: #a2dff7; /* Light Blue Sky */
+      color: #2e2e1f;
     }
 
     .sun-img {
@@ -22,6 +30,11 @@
       width: 100px;
       animation: rotateSun 20s linear infinite;
       z-index: 1;
+    }
+
+    @keyframes rotateSun {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
     }
 
     .vine-img {
@@ -41,14 +54,24 @@
       transform: scaleX(-1);
     }
 
-    @keyframes rotateSun {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
-
     @keyframes sway {
       0%, 100% { transform: rotate(0deg); }
       50% { transform: rotate(3deg); }
+    }
+
+    .mode-switch {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      background-color: #5c3b1e;
+      color: white;
+      padding: 10px 15px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 1rem;
+      z-index: 9999;
+      transition: all 0.3s ease;
     }
 
     .site-title {
@@ -157,6 +180,9 @@
   <img src="vine-left-highres.png" alt="Left Vine" class="vine-img vine-left" />
   <img src="vine-right-highres.png" alt="Right Vine" class="vine-img vine-right" />
 
+  <!-- Mode Switch Button -->
+  <button class="mode-switch" onclick="toggleMode()">Switch to Inspiration Mode</button>
+
   <!-- Header & Nav -->
   <div class="site-title">ChatGPT-Crafted Wisdom</div>
 
@@ -252,5 +278,17 @@
   <footer>
     &copy; 2025 ChatGPT-Crafted Wisdom. All rights reserved.
   </footer>
+
+  <script>
+    function toggleMode() {
+      document.body.classList.toggle('inspiration-mode');
+      let button = document.querySelector('.mode-switch');
+      if (document.body.classList.contains('inspiration-mode')) {
+        button.textContent = 'Switch to Regular Mode';
+      } else {
+        button.textContent = 'Switch to Inspiration Mode';
+      }
+    }
+  </script>
 </body>
 </html>
