--- a/herbal.html
+++ b/herbal.html
@@ -6,7 +6,6 @@
   <title>ChatGPT-Crafted Wisdom</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
   <style>
-    /* Default Styles */
     body {
       margin: 0;
       font-family: 'Open Sans', sans-serif;
@@ -14,13 +13,7 @@
       color: #2e2e1f;
       position: relative;
       overflow-x: hidden;
-      transition: all 0.3s ease;
-    }
-
-    /* Inspiration Mode Styles */
-    body.inspiration-mode {
-      background: #a2dff7; /* Light Blue Sky */
-      color: #2e2e1f;
+      transition: background 0.5s ease, color 0.5s ease;
     }
 
     .sun-img {
@@ -30,11 +23,6 @@
       width: 100px;
       animation: rotateSun 20s linear infinite;
       z-index: 1;
-    }
-
-    @keyframes rotateSun {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
     }
 
     .vine-img {
@@ -54,24 +42,14 @@
       transform: scaleX(-1);
     }
 
+    @keyframes rotateSun {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+
     @keyframes sway {
       0%, 100% { transform: rotate(0deg); }
       50% { transform: rotate(3deg); }
-    }
-
-    .mode-switch {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      background-color: #5c3b1e;
-      color: white;
-      padding: 10px 15px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      font-size: 1rem;
-      z-index: 9999;
-      transition: all 0.3s ease;
     }
 
     .site-title {
@@ -87,8 +65,8 @@
 
     nav {
       display: grid;
-      grid-template-columns: repeat(3, 1fr); /* Create 3 columns */
-      grid-template-rows: repeat(2, auto); /* Create 2 rows */
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(2, auto);
       grid-gap: 1rem;
       background-color: #ffe6a7;
       padding: 0.3rem 0.6rem;
@@ -119,10 +97,9 @@
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     }
 
-    /* For smaller screens, force the menu items to be in 2 rows */
     @media (max-width: 768px) {
       nav {
-        grid-template-columns: repeat(2, 1fr); /* Change to 2 columns */
+        grid-template-columns: repeat(2, 1fr);
       }
     }
 
@@ -135,6 +112,7 @@
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
       position: relative;
       z-index: 2;
+      transition: background 0.5s ease, color 0.5s ease;
     }
 
     .logo {
@@ -171,6 +149,41 @@
       max-width: 100%;
       border-radius: 8px;
     }
+
+    .inspiration-mode {
+      background: linear-gradient(to bottom, #ffb6c1, #a0d8f1); /* Soft pink and blue */
+      color: #4a2c2a;
+    }
+
+    .inspiration-mode .site-title {
+      color: #8e3b46;
+    }
+
+    .inspiration-mode h1, .inspiration-mode h2 {
+      color: #7a2b6f;
+    }
+
+    .inspiration-mode footer {
+      background: #ffcad4;
+      color: #5c2f2f;
+    }
+
+    .mode-switch {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      padding: 0.5rem 1rem;
+      background-color: #e0b9a7;
+      border: none;
+      border-radius: 10px;
+      font-weight: bold;
+      cursor: pointer;
+      z-index: 10;
+    }
+
+    .mode-switch:hover {
+      background-color: #fddc8a;
+    }
   </style>
 </head>
 <body>
@@ -179,9 +192,6 @@
   <img src="sun.png" alt="Sun" class="sun-img" />
   <img src="vine-left-highres.png" alt="Left Vine" class="vine-img vine-left" />
   <img src="vine-right-highres.png" alt="Right Vine" class="vine-img vine-right" />
-
-  <!-- Mode Switch Button -->
-  <button class="mode-switch" onclick="toggleMode()">Switch to Inspiration Mode</button>
 
   <!-- Header & Nav -->
   <div class="site-title">ChatGPT-Crafted Wisdom</div>
@@ -275,16 +285,20 @@
 
   </main>
 
+  <button class="mode-switch" onclick="toggleMode()">Switch to Inspiration Mode</button>
+
   <footer>
-    &copy; 2025 ChatGPT-Crafted Wisdom. All rights reserved.
+    <p>© 2025 ChatGPT-Crafted Wisdom | Designed with love, herbs, and AI magic</p>
   </footer>
 
   <script>
+    // Function to toggle inspiration mode
     function toggleMode() {
       document.body.classList.toggle('inspiration-mode');
-      let button = document.querySelector('.mode-switch');
+      
+      const button = document.querySelector('.mode-switch');
       if (document.body.classList.contains('inspiration-mode')) {
-        button.textContent = 'Switch to Regular Mode';
+        button.textContent = 'Switch to Normal Mode';
       } else {
         button.textContent = 'Switch to Inspiration Mode';
       }
